# audio-chain

./: Cargo.toml  README.md
.cargo/: config.toml
audio-agent/: Cargo.toml
audio-agent/examples/: enumerate.rs  recorder.rs  transcriber.rs  whisper.rs
audio-agent/src/: audio.rs  decoder.rs  device.rs  error.rs  filters.rs  lib.rs  model.rs  stream.rs
transcriber/: Cargo.toml
transcriber/src/: app.rs  decoder.rs  main.rs
