[package]
name = "audio-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
# candle-core = "0.4.1"
# candle-nn = "0.4.1"
# candle-transformers = "0.4.1"
candle-core = { version = "0.5.0", git = "https://github.com/huggingface/candle" }
candle-nn = { version = "0.5.0", git = "https://github.com/huggingface/candle" }
candle-transformers = { version = "0.5.0", git = "https://github.com/huggingface/candle" }
clap = { version = "4.5.4", features = ["derive"] }
cpal = "0.15.3"
crossbeam-channel = "0.5.12"
# hf-hub = "0.3.2"
hf-hub = { git = "https://github.com/huggingface/hf-hub.git" }
log = "0.4.21"
rand = "0.8.5"
serde_json = "1.0.115"
thiserror = "1.0.59"
tokenizers = "0.19.1"

[dev-dependencies]
anyhow = "1.0.82"
hound = "3.5"
ringbuf = "0.3.3"
symphonia = "0.5.4"
tracing-chrome = "0.7.2"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.18"

[features]
mkl = ["candle-core/mkl", "candle-nn/mkl", "candle-transformers/mkl"]
