[package]
name = "transcriber"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
audio-agent = { path = "../audio-agent" }
candle-transformers = { version = "0.5.0", git = "https://github.com/huggingface/candle" }
clap = { version = "4.5.4", features = ["derive"] }
crossbeam-channel = "0.5.12"
crossterm = "0.27.0"
ratatui = "0.26.2"
tracing = "0.1.40"
tracing-chrome = "0.7.2"
tracing-subscriber = { version = "0.3.18", features = ["tracing-log", "env-filter"] }
